# Sinkproof

./: Cargo.toml  README.md
src/: encryption.rs  hasher.rs  lib.rs  main.rs  storage.rs  verifier.rs
